--- a/app/components/portfolio/deckgrid-card.html
+++ b/app/components/portfolio/deckgrid-card.html
@@ -1,5 +1,5 @@
 <div class="a-card">
-    <img ng-src="../www/assets/img/project/{{card.img}}">
+    <img ng-src="../assets/img/project/{{card.img}}">
     <div class="overlay">
         <h3 class="title">{{ card.title }}</h3>
         <a ng-click="mother.imageModal(card.img)" class="p-button"><i class="ion-ios-search-strong"></i></a>
